--- a/index.html
+++ b/index.html
@@ -43,11 +43,26 @@
                 <li>Creative</li>
             </Ul>
         </section>
-        <section> 
-            <h2></h2>
+        <section class="name"> 
+            <h3>TECHNICIAL SKILLS</h3>
             <article>
+                <h5>HTML</h5>
                 <figure>
-                    <img src="" alt="">
+                    <img src="/images/HTML image.png" alt="html image">
+                    <figcaption></figcaption>
+                </figure>
+            </article>
+            <article>
+                <h5>CSS</h5>
+                <figure>
+                    <img src="/images/CSSimage.png" alt="css image">
+                    <figcaption></figcaption>
+                </figure>
+            </article>
+            <article>
+                <h5>JAVASCRIPT</h5>
+                <figure>
+                    <img src="/images/JSimage.png" alt="">
                     <figcaption></figcaption>
                 </figure>
             </article>
