image error fix

--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
             <article>
                 <h5>HTML</h5>
                 <figure>
-                    <img src="/images/HTML image.png" alt="html image">
+                    <img src="./images/HTML image.png" alt="html image">
                 </figure>
             </article>
             <article>
                 <h5>CSS</h5>
                 <figure>
-                    <img src="/images/CSSimage.png" alt="css image">
+                    <img src="./images/CSSimage.png" alt="css image">
                 </figure>
             </article>
             <article>
                 <h5>JAVASCRIPT</h5>
                 <figure>
-                    <img src="/images/JSimage.png" alt="">
+                    <img src="./images/JSimage.png" alt="js image">
                 </figure>
             </article>
         </section>
